@@ -1,0 +1,12 @@
+<tal:reference condition="python: 'item_reference' in view.visibleColumns">
+    <p class="discreet"
+       tal:define="itemReference context/getItemReference"
+       tal:condition="itemReference"
+       tal:content="itemReference" />
+</tal:reference>
+<tal:budget condition="python: 'budget_infos' in view.visibleColumns and context.getBudgetRelated() and not context.fieldIsEmpty('budgetInfos')">
+  <span tal:define="field python: context.getField('budgetInfos');
+                    mode string:view;">
+    <span metal:use-macro="context/widgets/field/macros/view" />
+  </span>
+</tal:budget>
